[package]
name = "fileflow"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.7", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = [] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
# file-transfer-system = {git = "https://github.com/Bicheka/file-transfer-system.git", features = ["p2p"] }
file-transfer-system = {path = "../../file-transfer-system", features = ["p2p"] }
tokio = { version = "1.41.0", features = ["full"] }
tauri-plugin-shell = "2.0.2"
anyhow = "1.0.91"
tauri-plugin-dialog = "2.0.3"
tauri-plugin-os = "2"
